# testing-trayicon

./: Cargo.toml
src/: lib.rs  main.rs  window.rs
winit-example/: Cargo.toml
winit-example/src/: main.rs
