[package]
edition = "2021"
name = "testing-trayicon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_core = "0.12.3"
image = "0.25.1"
once_cell = "1.19.0"
winit = "0.29.15"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_System_LibraryLoader",
]
version = "0.52"
